test/coder/error/divide-by-0.pt
using output;
put(1/0:1);
putln;
